优化水岸效果，优化雪地地形贴图，优化ts地图自动转换

--- a/mods/ts/terrain/brush-set.yaml
+++ b/mods/ts/terrain/brush-set.yaml
@@ -1,7 +1,9 @@
 
-brushBase: brush02.png
+BaseBrush: brush02.png
 	Size: 2224
-brushcell: brushcell.png
+DefualtWaterBrush: waterbrush.png
+	Size: 2000
+OneCellBrush: brushcell.png
 	Size: 1588
 brush01: brush01.png
 	Size: 1882
