--- a/mods/ts/rules/gdi-support.yaml
+++ b/mods/ts/rules/gdi-support.yaml
@@ -45,6 +45,8 @@ GACTWR:
 	Inherits: ^Defense
 	Inherits@IDISABLE: ^DisableOnPowerDown
 	Inherits@AUTOTARGET: ^AutoTargetAll
+	IsometricSelectable:
+		Height: 30
 	WithMakeAnimation:
 		BodyNames: make
 	WithSpriteBody:
@@ -68,6 +70,7 @@ GACTWR:
 		Type: Light
 	BlocksProjectiles:
 		Height: 768
+		ValidRelationships: Neutral, Enemy
 	BodyOrientation:
 		QuantizedFacings: 32
 	DetectCloaked:
@@ -93,6 +96,10 @@ GACTWR:
 		RequiresCondition: !build-incomplete && tower.sam
 		Recoils: false
 		Sequence: turret-sam
+	WithIdleOverlay@plugpowerup:
+		RequiresCondition: !build-incomplete && powrup
+		PauseOnCondition: empdisable
+		Sequence: plug-powrup
 	Armament@VULCPRIMARY:
 		RequiresCondition: tower.vulcan
 		Weapon: VulcanTower
@@ -132,27 +139,35 @@ GACTWR:
 	Power@samextra:
 		RequiresCondition: !disabled && tower.sam
 		Amount: -10
+	Power@plugpowerup:
+		RequiresCondition: !empdisable && powrup
+		Amount: 100
 	Pluggable:
 		Conditions:
 			tower.vulcan: tower.vulcan
 			tower.rocket: tower.rocket
 			tower.sam: tower.sam
+			powrup: powrup
 		Requirements:
-			tower.vulcan: !build-incomplete && !tower.vulcan && !tower.rocket && !tower.sam
-			tower.rocket: !build-incomplete && !tower.rocket && !tower.vulcan && !tower.sam
-			tower.sam: !build-incomplete && !tower.vulcan && !tower.rocket && !tower.sam
+			tower.vulcan: !build-incomplete && !tower.vulcan && !tower.rocket && !tower.sam && !powrup
+			tower.rocket: !build-incomplete && !tower.rocket && !tower.vulcan && !tower.sam && !powrup
+			tower.sam: !build-incomplete && !tower.vulcan && !tower.rocket && !tower.sam && !powrup
+			powrup: !build-incomplete && !tower.vulcan && !tower.rocket && !tower.sam && !powrup
 		EditorOptions:
 			tower.vulcan: Vulcan Tower
 			tower.rocket: RPG Upgrade
 			tower.sam: SAM Upgrade
+			powrup: Power Turbine
 	ProvidesPrerequisite@buildingname:
 	ProvidesPrerequisite@pluggable:
-		RequiresCondition: !build-incomplete && !tower.vulcan && !tower.rocket && !tower.sam
+		RequiresCondition: !build-incomplete && !tower.vulcan && !tower.rocket && !tower.sam && !powrup
 		Prerequisite: gactwr.socket
+	ProvidesPrerequisite@pluggablepowerup:
+		RequiresCondition: !build-incomplete && !tower.vulcan && !tower.rocket && !tower.sam && !powrup
+		Prerequisite: gapowr.socket
 	Replacement:
 		ReplaceableTypes: GDITower
-	IsometricSelectable:
-		Height: 48
+
 
 GACTWR.SOCKET:
 	AlwaysVisible:
@@ -207,3 +222,20 @@ GACSAM:
 		Type: tower.sam
 	Power:
 		Amount: -30
+
+
+GAPOWRUP:
+	Inherits: ^BuildingPlug
+	Valued:
+		Cost: 100
+	Tooltip:
+		Name: Power Turbine
+	Buildable:
+		Queue: Defense
+		BuildPaletteOrder: 100
+		Prerequisites: gapowr.socket, ~structures.gdi, ~techlevel.medium
+		Description: Provides extra power generation.
+	Plug:
+		Type: powrup
+	Power:
+		Amount: 50
