Apc drone not spawn when inside tunnel or carried

--- a/mods/ts/rules/gdi-vehicles.yaml
+++ b/mods/ts/rules/gdi-vehicles.yaml
@@ -48,6 +48,7 @@ APC:
 		SpawnOffset: 0,0,512
 		RespawnTicks: 256
 		FollowAfterAttackDelay: 21 ## bigger than reload time
+		PauseOnCondition: inside-tunnel || carried || empdisable
 	Armament:
 		Weapon: ApcReconDummyWeapon
 		PauseOnCondition: empdisable
