--- a/mods/ts/weapons/smallguns.yaml
+++ b/mods/ts/weapons/smallguns.yaml
@@ -315,7 +315,7 @@ Sniper:
 			Heavy: 5
 			Concrete: 5
 		DamageTypes: Prone100Percent, TriggerProne, BulletDeath
-		# TestDrawTerrain: true
+		TestDrawTerrain: true
 
 
 SilencerSniper:
