--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -646,6 +646,23 @@
 		RemoveInstead: true
 	RenderSprites:
 
+^VehiclePlug:
+	Interactable:
+	AlwaysVisible:
+	Building:
+		BuildSounds: place2.aud
+		UndeploySounds: cashturn.aud
+	SequencePlaceBuildingPreview:
+		ValidPlaceSequence: vplug-valid
+		InvalidPlaceSequence: vplug-invalid
+		Sequence: place
+		Palette: ra
+		FootprintAlpha: 0.75
+		SequenceAlpha: 0.75
+	KillsSelf:
+		RemoveInstead: true
+	RenderSprites:
+
 ^LeaveTiberiumWhenDeath:
 	Explodes@LeaveTib:
 		Weapon: TiberiumDeath
